syntax = "proto3";

package xray.proxy.blackhole;
option csharp_namespace = "Xray.Proxy.Blackhole";
option go_package = "github.com/xtls/xray-core/proxy/blackhole";
option java_package = "com.xray.proxy.blackhole";
option java_multiple_files = true;

import "common/serial/typed_message.proto";

message NoneResponse {}

message HTTPResponse {}

message HTTPCustomResponse {
  int32 status_code = 1;
}

message TLSAlertResponse {
  int32 alert_code = 1;
}

message Config {
  xray.common.serial.TypedMessage response = 1;
}
